# Feature-Transformer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
artifacts/: titanic_pipeline.joblib
experiments/: titanic_full_cycle.py
feature-transformer/: transformer.py
feature_transformer/: transformer.py
feature_transformer.egg-info/: SOURCES.txt  requires.txt
src/: __init__.py  transformer.py
src/feature_transformer.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_category_drift.py  test_edge_cases.py  test_invariants.py  test_schema_drift.py  test_serialization.py  test_smoke.py
utils/: run.py
