[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-transformer"
version = "0.1.0"
description = "Feature preprocessing transformer built on scikit-learn"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Zayed Ahmed" }]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.setuptools.packages.find]
where = ["src"]
